syntax = "proto3";

option go_package = "github.com/opencord/voltha/protos/go/ponsim";

package ponsim;

import "google/protobuf/empty.proto";

service PonSimCommon {
    rpc ProcessData (stream IncomingData) returns (google.protobuf.Empty) {}
}

message IncomingData {
    string id = 1;
    string address = 2;
    int32 port = 3;
    bytes payload = 4;

}